fix: spacing"

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .welcome-container{
-    background: linear-gradient(to left, rgb(191, 215, 205) 50%,white 50%);
+    background: linear-gradient(to left, rgb(177, 203, 192) 50%,white 50%);
     top:0;
     padding-bottom:20%;
 }
