--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -2,18 +2,22 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
+    margin-top:110px;
 }
 .card1 {
     width: 25%;
-    padding: 3% 0% 2% 10%;
+ 
 }
 
 .card2 {
     width: 25%;
+
 }
 
 .card3 {
     width: 25%;
+
 }
 
 .section {
@@ -29,14 +33,14 @@
     font-size: 20px;
     font-weight: lighter;
     letter-spacing: .15em;
-    font-family: 'Playfair Display', serif;
     font-weight: 700;
     color: #5a5a58;
-    padding-left: 10%;
-    width:20%;
 }
 
 .title-container {
-    height: 5%;
-    margin: 0px;
+    font-family: 'Playfair Display', serif;
+    margin-top:75px;
+    width: 25%;
+    text-align: center;
+    margin-left:10%;
 }
